# codex-usage-tracker

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  codex_app_tracker.py  codex_usage_tracker_gui.py  gui_visuals.py  install_scheduled_task.ps1  pyproject.toml  report_cache.py  run_tracker.ps1  uninstall_scheduled_task.ps1
.github/: ISSUE_TEMPLATE.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
assets/gui/brands/: README.md
docs/: ARCHITECTURE.md  GITHUB_PROFILE.md  LAUNCH_KIT.md  PRIVACY.md  PUBLISHING.md  RENAMING.md  ROADMAP.md
examples/: sample_sources.csv  sample_summary.json  sample_threads.csv
scripts/: build_windows_exe.ps1  generate_brand_assets.py  install_windows_app.ps1  push-to-github.ps1  uninstall_windows_app.ps1
tests/: test_tracker.py
