[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-usage-tracker"
version = "0.2.4"
description = "Local AI coding usage dashboard for Codex, Claude Code, Cursor, and WakaTime."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "SuvenSeo" }
]
keywords = [
  "codex",
  "openai",
  "claude",
  "cursor",
  "wakatime",
  "usage",
  "tokens",
  "dashboard",
  "developer-tools",
  "ai-coding"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development",
  "Topic :: System :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/SuvenSeo/ai-coding-usage-tracker"
Issues = "https://github.com/SuvenSeo/ai-coding-usage-tracker/issues"

[project.optional-dependencies]
build = [
  "pyinstaller>=6.0",
]

[project.scripts]
ai-coding-usage-tracker = "codex_app_tracker:main"
codex-usage-tracker = "codex_app_tracker:main"

[tool.setuptools]
py-modules = ["codex_app_tracker", "gui_visuals"]
